--- a/phase01/package.json
+++ b/phase01/package.json
@@ -20,13 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.21.1",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
