--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+#DATABASE_URL="mysql://username:password@host:portnumber/databaseName?schema=tableName"
+#DATABASE_URL="mysql://username:password@localhost:3306/databaseName"
+
 DATABASE_URL="postgresql://example_owner:example_token@example-pooler.us-east-2.aws.neon.tech/exampleProject?sslmode=require"
 # uncomment next line if you use Prisma <5.10
 DATABASE_URL_UNPOOLED="postgresql://example_owner:example_token@xample.us-east-2.aws.neon.tech/exampleProject?sslmode=require"
