add config module to get environments and add JWT service to generate access token

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@
 DATABASE_URL="postgresql://example_owner:example_token@example-pooler.us-east-2.aws.neon.tech/exampleProject?sslmode=require"
 # uncomment next line if you use Prisma <5.10
 DATABASE_URL_UNPOOLED="postgresql://example_owner:example_token@xample.us-east-2.aws.neon.tech/exampleProject?sslmode=require"
+
+JWT_SECRET=""
