--- a/phase01/package.json
+++ b/phase01/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "@nestjs/axios": "^3.1.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.21.1",
