--- a/phase01/package.json
+++ b/phase01/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.1.1",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -29,6 +30,7 @@
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
+    "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "node-fetch": "^3.3.2",
