--- a/phase01/package.json
+++ b/phase01/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
     "cache-manager": "^5.7.6",
+    "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "node-fetch": "^3.3.2",
